--- a/index.html
+++ b/index.html
@@ -115,14 +115,14 @@ function cambiaDicho()
         </section>
         
         <!-- Main library -->
-        <script src="js/three.min.js"></script>
+        <script src="js/flow.min.js"></script>
       
         <!-- Helpers -->
         <script src="js/projector.js"></script>
         <script src="js/canvas-renderer.js"></script>
 
         <!-- Visualitzation adjustments -->
-        <script src="js/3d-lines-animation.js"></script>
+        <script src="js/lines.js"></script>
 
         <!-- Animated background color -->
         <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
