--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>SOMEHOW</title>
+        <title>AYUDAME A VOLVER</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
         <style>
@@ -108,7 +108,21 @@ function cambiaDicho()
 
         <section class="canvas-wrap">
             <div id="dicho" class="dicho">
-                <h1>''''</h1>
+                <h1>~~~~~~~</h1>
+            </div>
+            <div class="donate">
+<form action="https://www.paypal.com/donate" method="post" target="_top">
+ <!-- Identify your business so that you can collect the payments. -->
+ <input type="hidden" name="Renzo Silva" value="roomsilv@gmail.com">
+ <!-- Specify details about the contribution -->
+ <input type="hidden" name="no_recurring" value="0">
+ <input type="hidden" name="item_name" value="Volver a casa">
+ <input type="hidden" name="item_number" value="Ayudame a volver a mi pais">
+ <input type="hidden" name="currency_code" value="USD">
+ <!-- Display the payment button. -->
+ <input type="image" name="submit" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" alt="Donate">
+ <img alt="" width="1" height="1" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" >
+</form>
             </div>
             <div id="canvas" class="gradient"></div>
             
@@ -123,13 +137,7 @@ function cambiaDicho()
 
         <!-- Visualitzation adjustments -->
         <script src="js/lines.js"></script>
-
-        <!-- Animated background color -->
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-        <script src="js/color.js"></script>
         
-        <!-- Text to show-->
-        <script src="./textos.txt"></script>
 
     </body>
 </html>
