--- a/index.html
+++ b/index.html
@@ -117,14 +117,8 @@ function cambiaDicho()
                 <h1>~~~~~~~</h1>
             </div>
             <div id="donate" class="donate">
-<form action="https://www.paypal.com/donate" method="post" target="_top">
- <!-- Identify your business so that you can collect the payments. -->
- <input type="hidden" name="Renzo Silva" value="roomsilv@gmail.com">
- <!-- Specify details about the contribution -->
- <input type="hidden" name="no_recurring" value="0">
- <input type="hidden" name="item_name" value="Volver a casa">
- <input type="hidden" name="item_number" value="Ayudame a volver a mi pais">
- <input type="hidden" name="currency_code" value="USD">
+<form action="https://www.paypal.com/donate/?hosted_button_id=NLZW34BDFQY6J" method="post" target="_top">
+
  <!-- Display the payment button. -->
  <input type="image" name="submit" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" alt="Donate">
  <img alt="" width="1" height="1" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" >
